--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="site-header-content">
             <h1>Hi, I am Srinivas Srivatsa, I am 20 years old, living in Hyderabad, India</h1>
             <h3>I am learning full stack development. Watch this space for my upcoming projects</h3>
-            <h5>If you want to learn with me, join me at <a class="course-link" href="https://www.youtube.com/channel/UCNFmBuclxQPe57orKiQbyfA">this course</a> with Tanay Pratap</h5>
+            <h5>If you want to learn it with me, join me at <a class="course-link" href="https://www.youtube.com/channel/UCNFmBuclxQPe57orKiQbyfA">this course</a> with Tanay Pratap</h5>
             </div>
         </header>
     </body>
